[gd_scene load_steps=32 format=2]

[ext_resource path="res://Sprites/Player/kit_from_firefox.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Interface/Interface.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.5, 31 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 56, 80 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 56, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 56, 80 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 640, 56, 80 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 56, 640, 56, 80 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 112, 640, 56, 80 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 320, 56, 80 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 56, 320, 56, 80 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 112, 320, 56, 80 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 56, 80 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 56, 240, 56, 80 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 112, 240, 56, 80 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 80, 56, 80 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 56, 80, 56, 80 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 112, 80, 56, 80 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 56, 80 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 56, 480, 56, 80 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 112, 480, 56, 80 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 112, 160, 56, 80 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 400, 56, 80 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 56, 400, 56, 80 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 112, 400, 56, 80 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 56, 80 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 56, 160, 56, 80 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "dead",
"speed": 8.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "hit",
"speed": 8.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "air_attack",
"speed": 12.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": false,
"name": "fall",
"speed": 0.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "run_attack",
"speed": 12.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "jump",
"speed": 8.0
} ]

[sub_resource type="Animation" id=27]
resource_name = "invul"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0588235 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "restore"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( -2, -39 )
z_index = 6
collision_mask = 15
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 7.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 26 )
animation = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/invul = SubResource( 27 )
anims/restore = SubResource( 28 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 5, 15 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = -256
limit_bottom = 704
limit_smoothed = true
smoothing_enabled = true
editor_draw_limits = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Interface" parent="CanvasLayer" instance=ExtResource( 3 )]
[connection signal="lives_updated" from="." to="CanvasLayer/Interface" method="_on_lives_updated"]
[connection signal="power_updated" from="." to="CanvasLayer/Interface" method="_on_power_updated"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
